fix manual check-in arrow bug on small screen

--- a/myApp/www/css/style.css
+++ b/myApp/www/css/style.css
@@ -34,7 +34,7 @@
 }
 .checkin-page .manual-checkin-button{
   color: #666;
-  font-size:14px;
+  font-size:13px;
 }
 .service-logo {
   height: 50px;
